# gul

./: .env.example  api.dockerfile  docker-compose.yml  pyproject.toml
api/: main.py  settings.py
api/database/: __init__.py  postgres.py  tables.py
api/gul/: models.py  query.py  types.py
api/gul/repositories/: arpentries.py  lookup.py  query.py
docker/: entrypoint.sh  run-app
